--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   position: absolute;
+  height: 600px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -8,7 +9,9 @@
 table {
   width: 800px;
   border-collapse: collapse;
-  overflow: hidden;
+  display: block;
+  block-size: 500px;
+  overflow-y: scroll;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
