fix: User Authentication flow

--- a/src/scenes/signup/styles.module.css
+++ b/src/scenes/signup/styles.module.css
@@ -51,7 +51,7 @@
 .img {
     width: 160%;
     position: absolute;
-    left: -125px;
+    left: -150px;
     top: -50px;
 }
 
@@ -67,7 +67,7 @@
     font-size: 25px;
     font-weight: 400;
     color: #2c444e;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .input {
@@ -81,6 +81,13 @@
     font-size: 13px;
 }
 
+.error_message {
+    font-size: 14px;
+    color: red;
+    margin: 5px 0;
+    padding: 0;
+}
+
 .btn {
     font-size: 18px;
     font-weight: 500;
@@ -92,6 +99,11 @@
     outline: none;
     border: none;
     cursor: pointer;
+}
+
+.btn:disabled, .btn[disabled] {
+    background-color: #ffc80180;
+    cursor: not-allowed;
 }
 
 .text {
@@ -113,7 +125,7 @@
     border-radius: 5px;
     border: none;
     outline: none;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 1);
     box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px,
         rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px;
     font-size: 16px;
@@ -125,6 +137,12 @@
     align-items: center;
     justify-content: center;
     position: relative;
+}
+
+.google_btn:disabled,
+.google_btn[disabled] {
+    background-color: rgba(255, 255, 255, 0.5);
+    cursor: not-allowed;
 }
 
 .google_btn > img {
